--- a/style.css
+++ b/style.css
@@ -15,7 +15,34 @@
 .nav{
     border: 1px solid #000;
     background-color: skyblue;
-    text-align: center;
+}
+.nav ul li{
+    display: inline-block;
+    list-style: none;
+}
+.nav .logo{
+    float:left;
+    font-weight: 100;
+}
+
+.nav a{
+    text-decoration: none;
+    color:#ff0066;
+    font-size: 30px;
+    font-family:Arial, Helvetica, sans-serif;
+    margin:0 20px;
+}
+.dropdown{
+    position:relative;
+}
+#dropdown-content {
+    display: none;
+    position: absolute;
+    left: 407px;
+    background-color: #f9f9f9;
+    width: 82px;
+    font-size: 26px;
+    padding: 5px;
 }
 .section{
     display:grid;
@@ -23,7 +50,6 @@
     border: 2px solid #000;
     padding:10px;
     text-align: center;
-    font-size: 30px;
 }
 .article{
     display:grid;
@@ -38,6 +64,7 @@
     padding: 20px;
     border: 1px solid #000;
     width: 1078px;
+    font-size: 30px;
 }
 .item2{
     grid-row: 2/3;
@@ -46,12 +73,14 @@
     height: 231px;
     border: 1px solid #000;
     width: 1078px;
+    font-size: 20px;
 }
 .item3{
     grid-row: 1/3;
     background-color: chocolate;
     width: 291px;
     border: 1px solid #000;
+    font-size: 30px;
 }
 .item4{
     display: grid;
@@ -61,6 +90,23 @@
     border: 1px solid #000;
     position: relative;
     left: 13px;
+    font-size: 30px;
+}
+button {
+    padding: 10px;
+    border: none;
+    outline: none;
+    width: 100px;
+    font-size: 14px;
+}
+#result {
+    background-color: yellow;
+    padding: 5px;
+    position: absolute;
+    top: 366px;
+    left: 886px;
+    color: #000;
+    font-weight: bold;
 }
 .footer{
     border: 1px solid #000;
