--- a/form validation/style.css
+++ b/form validation/style.css
@@ -1,20 +1,37 @@
 
 
-.container{
+.modal-content{
     width: 500px;
     height: auto;
     padding:20px;
-    background-color: aqua;
-    opacity: 0.9;
+    border: 2px solid black;
+    /*background-color: aqua;*/
+    /*opacity: 0.9;*/
     margin: auto;
 }
-[type="text"],[type="email"]
+.heading{
+    text-align: center;
+    border-bottom: 2px solid #000;
+}
+#form{
+    width: 480px;
+}
+[type="text"],[type="email"],[type="password"],textarea
 {
     width:100%;
-    padding:6px;
+    padding:10px;
     margin:10px 0;
+    font-size: 25px;
 }
-
+.gender input[type="radio"] {
+    display: inline-block;
+    margin: 21px 5px;
+    margin-left: 5px;
+    margin-left: 37px;
+}
+label {
+    font-size: 18px;
+}
 button {
     border: none;
     padding: 6px;
