--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
 .nav{
     border: 1px solid #000;
     background-color: skyblue;
+    height: 59px;
+    line-height: 55px;
 }
 .nav ul li{
     display: inline-block;
@@ -49,7 +51,7 @@
     margin-top: 10px;
     border: 2px solid #000;
     padding:10px;
-    text-align: center;
+    /*text-align: center;*/
 }
 .article{
     display:grid;
@@ -70,10 +72,11 @@
     grid-row: 2/3;
     background-color: green;
     padding: 20px;
-    height: 231px;
+    height: 410px;
     border: 1px solid #000;
     width: 1078px;
     font-size: 20px;
+    text-align: center;
 }
 .item3{
     grid-row: 1/3;
@@ -90,9 +93,9 @@
     border: 1px solid #000;
     position: relative;
     left: 13px;
-    font-size: 30px;
+    /*font-size: 30px;*/
 }
-/* calculator add */
+/* calculator */
 button {
     padding: 10px;
     border: none;
@@ -100,65 +103,82 @@ button {
     width: 100px;
     font-size: 14px;
 }
-#result {
+#num1, #num2, #num3, #num4{
+    width: 203px;
+    padding: 6px;
+}
+.jquery-calculator {
+    margin-left: 27px;
+}
+#jsresult {
     /*background-color: yellow;*/
     padding: 5px;
     position: absolute;
-    top: 366px;
-    left: 886px;
+   top: 446px;
+    left: 96px;
     color: yellow;
     font-weight: bold;
 }
 
-/* Tab and accordion code */
-.tabs {
+/* jquery cal  */
+.item2-sub {
     display: flex;
 }
-.d1{
-    display: none;
-}
-.accordion-content{
-    display: none;
+#jqresult {
+    /*background-color: yellow;*/
+    padding: 5px;
+    position: absolute;
+   top: 446px;
+    left: 655px;
+    color: yellow;
+    font-weight: bold;
 }
 .tab-container{
-    /*background-color: lightgray;*/
-    padding: 17px;
-    height: auto;
+    width: 353px;
+    margin: 0 auto;
 }
-.tog {
+ul.tabs{
+            margin: 0px;
+            padding: 0px;
+            list-style: none;
+        }
+        ul.tabs li{
+            background: none;
+            color: #222;
+            display: inline-block;
+            padding: 10px 15px;
+            cursor: pointer;
+        }
+
+        ul.tabs li.current{
+            background: #ededed;
+            color: #222;
+        }
+
+        .tab-content{
+            display: none;
+            background: #ededed;
+            padding: 15px;
+        }
+
+        .tab-content.current{
+            display: inherit;
+        }
+
+/*Accordion css*/
+.acc-header {
     background-color: aqua;
-    width: 121px;
-    border: none;
-    outline: none;
-    font-size: 30px;
-    font-family: unset;
-    padding: 9px;
-    cursor: pointer;
-    font-weight: bold;
-}
-.tog:hover{
-    border-bottom: 1px solid #000;
-}
-#accordion, #accordion2 {
-    width: 311px;
-    border: none;
-    outline: none;
-    font-size: 30px;
-    font-family: unset;
-    padding: 9px;
-    cursor: pointer;
-    font-weight: bold;
-    oposition: relative;
-    position: relative;
-    top: 9px;
-    background-color: antiquewhite;
-}
-.accordion-content {
-    background-color: bisque;
     padding: 10px;
-    position: relative;
-    top: 10px;
-    width: 94%;
+    margin: 3px;
+    width: 91%;
+    cursor: alias;
+}
+.demo div {
+color: #FFF;
+background-color: maroon;
+padding: 11px;
+margin-left: 10px;
+width: 86%;
 }
 .footer{
     border: 1px solid #000;
@@ -167,3 +187,68 @@ button {
     text-align: center;
     margin-top:10px;
 }
+
+/* contact form modal */
+#myModal{
+    display: none;
+    position: absolute;
+    /*z-index: 1;*/
+    overflow: auto;
+}
+.modal-content{
+    width: 500px;
+    height: auto;
+    padding:20px;
+    border: 2px solid black;
+    background-color: #fff;
+    /*opacity: 0.9;*/
+    margin: auto;
+}
+.heading{
+    text-align: center;
+    border-bottom: 2px solid #000;
+}
+#form{
+    width: 480px;
+    line-height: 26px;
+}
+#name, #email, #mob, #pass1, #pass2, #message
+{
+    width:100%;
+    padding:10px;
+    margin:10px 0;
+    font-size: 25px;
+}
+.gender input[type="radio"] {
+    display: inline-block;
+    margin: 21px 5px;
+    margin-left: 5px;
+    margin-left: 37px;
+}
+label {
+    font-size: 18px;
+}
+#submit, #reset {
+    border: none;
+    padding: 6px;
+    outline: none;
+    font-size: 19px;
+    background: #000;
+    color: #fff;
+    border-radius: 6px;
+    cursor: pointer;
+}
+.close {
+    float: right;
+font-size: 36px;
+background-color: #000;
+padding: 0;
+color: #fff;
+cursor: pointer;
+border-radius: 50px;
+width: 28px;
+text-align: center;
+position: relative;
+top: -76px;
+left: 38px;
+height: 28px;
